# twitterbot

./: .gitignore  PROJECT.md  README.md  example.env  get_user_info.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_linkedin_discovery.py  setup_verification.py  test_ai_linkedin.py  test_conversation_pipeline.py  test_linkedin_discovery.py  test_manual_conversation.py  test_profile_only.py  test_real_dms.py
src/: __init__.py  gemini_linkedin_discovery.py  linkedin_ai_discovery.py  linkedin_discovery.py  main.py
src/config/: __init__.py  settings.py
src/google_sheets/: __init__.py  client.py  formatter.py
src/summarizer/: __init__.py  conversation_summarizer.py
src/twitter/: __init__.py  client.py  dm_fetcher.py  models.py
tests/: __init__.py
